<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RenRenHardest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
  	<string name="friend">好友</string>
    <string name="number">No.1</string>
    <string name="time">10</string>
    <!-- Logined Main Activity -->
    <string name="choose_settings">游戏设置</string>
    <string name="choose_scores">成  绩  单</string>
    <string name="choose_start_game">进入游戏</string>
    <string name="exit_app">退出程序</string>
    <string name="auth_failed">验证失败</string>
    <string name="logout">退出登录</string>
    <string name="logout_success">退出登录成功</string>
    <string name="username"></string>
    <string name="password"></string>
    <string name="title_activity_game_main">GameMainActivity</string>
    <string name="title_activity_dannni_main">DannniMainActivity</string>
    <string name="title_activity_game_over">GameOverActivity</string>
    
    <!-- filter -->
    <string name="filter_none">原图</string>
    <string name="filter_grey">黑白</string>
    <string name="filter_old">复古</string>
    <string name="filter_eclosion">羽化</string>
    <string name="filter_oil">油画</string>
    <string name="filter_softness">柔化</string>
    
    <!-- Random Frinds Activity -->
    <string name="shake_tips">好友头像不好认？摇一摇手机吧！</string>
    <string name="start_game">开始</string>
    
    <!-- Action Bar Overflow -->
    <string name="allMyImages">我的头像</string>
    <string name="allMyFriendsImages">好友头像</string>
    <string name="gameRule">游戏规则</string>
    <string name="quitGame">退出游戏</string>
    
    <!-- Game Setting -->
    <string name="music">音乐</string>
    <string name="sound_effect">音效</string>
    <string name="difficulty">难度</string>
    <string name="difficulty_simple">简单</string>
    <string name="difficulty_middle">中等</string>
    <string name="difficulty_hard">困难</string>
    <string name="music_on">开</string>
    <string name="music_off">关</string>
    
    <!-- Game Over -->
    <string name="new_record">新记录诞生啦！</string>
   	<string name="final_score">1000</string>
   	<string name="replay">重玩</string>
   	<string name="return_menu">返回</string>
   	<string name="share_score">上传成绩</string>
</resources>