<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
        android:id="@+id/item_allMyImages"
        android:orderInCategory="1"
        android:showAsAction="ifRoom|withText"
        android:title="@string/allMyImages"/>

    <item
        android:id="@+id/item_allMyFriendsImages"
        android:orderInCategory="2"
        android:showAsAction="ifRoom|withText"
        android:title="@string/allMyFriendsImages"/>
     <item
        android:id="@+id/item_gameRule"
        android:orderInCategory="3"
        android:showAsAction="ifRoom|withText"
        android:title="@string/gameRule"/>

    <item
        android:id="@+id/item_quitGame"
        android:orderInCategory="4"
        android:showAsAction="ifRoom|withText"
        android:title="@string/quitGame"/>

</menu>