<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/new_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="10dp"
        android:text="@string/new_record"
        android:textSize="20sp" />

    <FrameLayout
        android:id="@+id/show_result"
        android:layout_width="wrap_content"
        android:layout_height="160dip"
        android:layout_below="@+id/new_record"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/score_final"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dip"
            android:text="@string/final_score"
            android:textSize="70sp"
            android:textStyle="bold|italic"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="70dip"
            android:background="@drawable/renren_share"
            android:layout_gravity="bottom" />

        
    </FrameLayout>
    
    <ImageView
            android:id="@+id/star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/show_result"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/star2"
            android:layout_gravity="bottom" />

    <LinearLayout
        android:id="@+id/button_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/star"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/replay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_blue"
            android:text="@string/replay"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/return_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:background="@drawable/button_red"
            android:text="@string/return_menu"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>