<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:id="@+id/game_layout" >
    
    <Button
        android:id="@+id/pause"
        android:background="@drawable/pause"
        android:layout_width="48dip"
        android:layout_height="48dip"
        android:layout_alignParentRight="true" />    
    
    <ImageView
        android:id="@+id/iv"
        android:src="@drawable/rainbow"
        android:background="@drawable/imageview_back"
        android:adjustViewBounds="true"
		android:maxWidth="1000dip"
		android:maxHeight="1000dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dip"
        android:contentDescription="@string/app_name" />
   
    <RelativeLayout
        android:id="@+id/game_status"
        android:layout_centerHorizontal="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_group">
        
        <TextView
            android:id="@+id/score_realtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:paddingLeft="15dip"
            android:textSize="25sp"
            android:textStyle="bold" />
        
        <TextView
            android:id="@+id/time_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"                     
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="@string/time"
            android:textStyle="bold"
            android:textSize="25sp" />
    </RelativeLayout> 
  
    <LinearLayout 
        android:id="@+id/button_group"
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:longClickable="true" >
        
        <Button
            android:id="@+id/filter_button0"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button_blue"
            android:text="@string/filter_grey"
            android:textSize="25sp"
            android:textStyle="bold"
            android:filterTouchesWhenObscured="false"
	            android:focusableInTouchMode="false" />

        <Button
            android:id="@+id/game_friend_button"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button_yellow"
            android:text="@string/friend"
            android:textSize="25sp"
            android:textStyle="bold"
            android:filterTouchesWhenObscured="false"
	            android:focusableInTouchMode="false" />

        <Button
            android:id="@+id/filter_button1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button_red"
            android:text="@string/filter_old"
            android:textSize="25sp"
            android:textStyle="bold" 
            android:textAlignment="center"
            android:filterTouchesWhenObscured="false"
	            android:focusableInTouchMode="false"/>

    </LinearLayout>
    
</RelativeLayout>