<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <!--
         <Button
        android:id="@+id/choose_scores"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:background="@drawable/button_blue"
        android:text="@string/choose_scores"
        android:textSize="25sp"
        android:textStyle="bold" />
    -->

    <LinearLayout
        android:layout_width="200dip"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_marginTop="100dip"
        android:orientation="vertical" >

        <Button
            android:id="@+id/choose_settings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dip"
            android:background="@drawable/button_blue"
            android:text="@string/choose_settings"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/start_game"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:background="@drawable/button_red"
            android:text="@string/choose_start_game"
            android:textSize="25sp"
            android:textStyle="bold" />
        
        <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_gravity="right"
        android:layout_marginTop="30dip"
        android:background="@drawable/button_gray"
        android:text="@string/logout"
        android:textSize="16sp"
        android:textStyle="bold" />

       <!--  <Button
            android:id="@+id/logout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:background="@drawable/button_gray"
            android:text="@string/logout"
            android:textSize="25sp"
            android:textStyle="bold" /> -->
    </LinearLayout>

    
    
</LinearLayout>